<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TrafficGo</string>
    <string name="title_profile" translatable="false">Profile</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_policemain" translatable="false">policemain</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_location" translatable="false">location</string>
    <string name="title_update" translatable="false">update</string>
    <string name="title_delete" translatable="false">delete</string>
    <string name="title_insert">insert</string>
    <string name="title_activity_main_all" translatable="false">MainAllActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="shared_preference_usr" translatable="false">user_sp</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_by_car_number">search by car number</string>
    <string name="search">search</string>
    <string name="driver_info">Driver Info</string>
    <string name="add_violation">ADD VIOLATION</string>
    <string name="user_name">user Name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="user_name_police">User Name</string>
    <string name="password_police">Password</string>
    <string name="re_write_password">re-write password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="male">Male</string>

    <string name="car_number">Car Number</string>
    <string name="car_type">Car Type</string>
    <string name="address">Address</string>
    <string name="job">Job</string>

    <string name="user_name_p">User Name</string>
    <string name="re_write_password_p">Re-write Password</string>
    <string name="last_name_p">last Name</string>
    <string name="first_name_p">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="dgree">Dgree</string>
    <string name="job_id">Job ID</string>
    <string name="address_p">Address</string>

    <string name="add_police">Add Police</string>
    <string name="add_vio">Add vio</string>
    <string name="add_driver">Add Driver</string>
    <string name="add_type_of_violation">Add Type of Violation</string>
    <string name="vio_typ_high_speed" translatable="false">Exceeding the speed limit   (Amount:5000 RY)</string>
    <string name="vio_typ_car_with_no_number" translatable="false">Using dazzling lights   (Amount:1000 RY)</string>

    <string name="vio_typ_not_wearing_seatbelt">Not wearing a seatbelt   (Amount:1000 RY)</string>
    <string name="vio_typ_no_parking">No parking   (Amount:1000 RY)</string>
    <string name="vio_typ_driving_vehicle_that_produces_excessive_smoke">Driving a vehicle that produces excessive smoke   (Amount:5000 RY)</string>
    <string name="vio_typ_using_cell_phone_while_driving">Using a cell phone while driving   (Amount:1000 RY)</string>
    <string name="vio_typ_unnecessary_usage_of_the_horn">Unnecessary usage of the horn   (Amount:1000 RY)</string>
    <string name="vio_typ_Driving_without_drivers_license">Driving without a drivers license   (Amount:5000 RY)</string>
    <string name="vio_typ_Driving_without_valid_documentation"><![CDATA[>Driving without valid documentation   (Amount:1000 RY)]]></string>
    <string name="vio_typ_Unsafe_overtake">Unsafe overtake   (Amount:5000 RY)</string>
    <string name="vio_typ_Driving_against_the_flow_of_traffic">Driving against the flow of traffic   (Amount:5000 RY)</string>
    <string name="vio_typ_Impending_traffic">Impending traffic   (Amount:1000 RY)</string>
    <string name="vio_typ_Driving_through_or_stopping_in_crossing_zone">Driving through or stopping in a crossing zone   (Amount:1000 RY)</string>
    <string name="vio_typ_Reckless_driving">Reckless driving   (Amount:5000 RY)</string>
    <string name="vio_typ_Refusing_or_comply_to_policemen_signal">Refusing or comply to policemen`s signal   (Amount:1000 RY)</string>
    <string name="username" translatable="false">UserName</string>
    <string name="delete" translatable="false">delete</string>
    <string name="update" translatable="false">update</string>
    <string name="update_delete" translatable="false">update_delete</string>
    <string name="msg_subscribed" translatable="false" />
    <string name="msg_subscribe_failed" translatable="false">failed</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="password_driver">password_driver</string>
    <string name="UserName">User Name</string>
    <string name="card_date">Card Date</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="card_number">Card Date</string>
    <string name="licence">Licence</string>
    <string name="licence_date">licence_Date</string>
    <string name="update_delete_user">update_delete_user</string>
    <string name="menu_violation">menu_Violation</string>
    <string name="violation">Violation</string>
    <string name="title_activity_maps2">Map</string>
    <string name="Name">name</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="id_job">ID Job</string>

</resources>
