<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_home"
            android:icon="@drawable/ic_policeman"
            android:title="@string/add_police"

            />
        <item
            android:id="@id/nav_gallery"
            android:icon="@drawable/ic_v"
            android:title="@string/add_violation" />

        <item
            android:id="@id/nav_slideshow"
            android:icon="@drawable/ic_v"
            android:title="@string/violation" />

        <item
            android:id="@id/nav_dashboard"
            android:icon="@drawable/ic_drive"
            android:title="@string/add_driver"
            />

        <item
            android:id="@id/nav_update_delete_user"
            android:icon="@drawable/update"
            android:title="@string/update_delete_user"
            />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="Logout"
            />

    </group>


</menu>
