<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_info_user"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/color2"
        android:textColorHint="@color/hint_txt_color"
       />

    <TextView
        android:id="@+id/txt_user_car_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_number"
        android:textSize="20sp"
        android:textColor="@color/color2"
        android:textColorHint="@color/hint_txt_color"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/txt_user_type_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_type"
        android:textSize="20sp"
        android:textColor="@color/color2"
        android:textColorHint="@color/hint_txt_color"
        android:layout_marginTop="20dp"
        />

</LinearLayout>



</androidx.cardview.widget.CardView>