<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dashboard"
    >


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.driver.ui.manager.Manager.add_Police.HomeFragment"
        android:label="add police"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.driver.ui.manager.Manager.add_dreiver.DashboardFragment"
        android:label="add driver"
        tools:layout="@layout/fragment_dashboard" >


    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.driver.ui.police.GalleryFragment"
        android:label="add violation"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.driver.ui.driver.SlideshowFragment"
        android:label="Driver"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.driver.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.driver.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.driver.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_update_delete_user"
        android:name="com.example.driver.ui.manager.Manager.update_delete_user.update_delete"
        android:label="update_delete_user"
        tools:layout="@layout/update_delete_user" />


    <fragment
        android:id="@+id/nav_payment_vio"
        android:name="com.example.driver.ui.manager.Manager.paymentVio.paymentVioFragment"
        android:label="payment_vio"
        tools:layout="@layout/fragment_payment_vio" />







</navigation>