<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_add_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imgdriver"
                app:riv_border_color="@color/color_all"
                app:riv_border_width="2dp"
                app:riv_corner_radius="50dp"
                android:layout_marginRight="2dp"
                tools:ignore="VectorDrawableCompat"
                />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColorHint="@color/color_all"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_userName_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:hint="@string/UserName"
                    android:layout_marginTop="15dp"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:textColor="@color/color_all"
                    android:textColorHint="@color/color_all"
                     />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColorHint="@color/color_all"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_all"
                    android:textColorHint="@color/color_all"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColorHint="@color/color_all"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:hint="@string/re_write_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_all"
                    android:textColorHint="@color/color_all"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_fName_diver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:maxLength="15"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_lName_driver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:maxLength="15"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:checkedButton="@id/rb_male"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:gravity="center"
                    android:textColor="@color/color_all" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female"
                    android:gravity="center"
                    android:textColor="@color/color_all" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_phoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="none|phone"
                        android:maxLength="9"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_car_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/car_number"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_car_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/car_type"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_card_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_date"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_licence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="licence"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/color_all"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/job"
                        android:textColor="@color/color2"
                        android:textColorHint="@color/color_all"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_SignUp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:onClick="addUser"
                    android:text="@string/add_driver"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:background="@drawable/shap_cardview"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="420dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>